--- a/index.html
+++ b/index.html
@@ -5,16 +5,85 @@
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <!-- Added Font Awesome icons. -->
+    <link 
+      rel="stylesheet" 
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+      crossorigin="anonymous"/>
   </head>
   <body>
     <div id="pic">
-      BIG FANCY PIC
+      <!-- Added image from placekitten.com. -->
+      <img src="https://placekitten.com/500/138" alt="big cat banner">
     </div>
     <div id="icons">
-      <!-- TODO: spans for icons -->
+      <!-- Added spans for icons. Used icons from Font Awesome. -->
+      <span><i class="fas fa-dog"></i></span>
+      <span><i class="fas fa-cat"></i></span>
+      <span><i class="fas fa-monkey"></i></span>
+      <span><i class="fas fa-pig"></i></span>
+      <span><i class="fas fa-horse"></i></span>
+      <span><i class="fas fa-elephant"></i></span>
     </div>
     <div id="mini-layout">
-      <!-- TODO: Spans for 4 item wide mini-layout -->
+      <!-- Added spans for 4 item wide mini-layout. Used a mixture links and downloaded jpegs from placeholder sites for images. -->
+      <span>
+        <div>
+          <img src="https://placekitten.com/100/100" alt="Kittens Pic">
+        </div>
+        <div>
+          <strong>Cute Kittens</strong>
+        </div>
+        <div>
+          <p>Ready to play!</p>
+        </div>
+        <div>
+          <a href="https://placekitten.com/">More cats</a>
+        </div>
+      </span>
+      <span>
+        <div>
+          <img src="photos/elephant.jpg" alt="Elephant Pic">
+        </div>
+        <div>
+          <strong>Inquisitive Calf</strong>
+        </div>
+        <div>
+          <p>I'm ready!</p>
+        </div>
+        <div>
+          <a href="https://unsplash.com/s/photos/baby-elephant">More elephants</a>
+        </div>
+      </span>
+      <span>
+        <div>
+          <img src="https://place-puppy.com/100x100" alt="Puppy Pic">
+        </div>
+        <div>
+          <strong>Sweet Puppy</strong>
+        </div>
+        <div>
+          <p>What'cha doing?</p>
+        </div>
+        <div>
+          <a href="https://place-puppy.com/">More Puppies</a>
+        </div>
+      </span>
+      <span>
+        <div>
+          <img src="photos/monkeys.jpg" alt="Monkeys Pic">
+        </div>
+        <div>
+          <strong>Cuddly Infants</strong>
+        </div>
+        <div>
+          <p>We love you!</p>
+        </div>
+        <div>
+          <a href="https://unsplash.com/s/photos/baby-monkey">More monkeys</a>
+        </div>
+      </span>
     </div>
   </body>
 </html>
